--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>EstudiaPlus - Portal de Estudio Grado 11</title>
+    <title>Estudia Lisama - Portal de Estudio Grado 11</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <style>
         * {
@@ -675,7 +675,7 @@
         </div>
         
         <footer>
-            <p>© 2023 EstudiaPlus - Portal de Estudio para Grado 11</p>
+            <p>© 2023 Estudia Lisama - Portal de Estudio para Grado 11</p>
             <p>Recursos educativos para matemáticas, castellano, biología, física, química y filosofía</p>
         </footer>
     </div>
