--- a/index.html
+++ b/index.html
@@ -440,7 +440,8 @@
             <h1><i class="fas fa-graduation-cap"></i> Estudia Lisama - Grado 11</h1>
             <p>Tu portal de estudio completo para todas las materias de grado 11. Encuentra recursos, temas importantes y herramientas para tu éxito académico.</p>
             <a href="https://amircanti.github.io/fulltemas/" target="_blank" class="btn">Ver pagina con totalidad de temas</a>
-            <a href="https://amircanti.github.io/Grado_10/" target="_blank" class="btn">Ver pagina con totalidad de temas</a>
+            <p>Tu portal de estudio completo para todas las materias de grado 10.</p>
+            <a href="https://amircanti.github.io/Grado_10/" target="_blank" class="btn">Ver pagina con temas de grado 10</a>
         </header>
         
         <div class="destacado">
